# Sympy-nozzle-gasdynamics-lab

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: Overview_EN.md  Overview_RU.md
notebooks/: 01_symbolic_derivations.ipynb  02_nozzle_profiles.ipynb
src/symgas/: __init__.py  numerics.py  plots.py  symbolic_nozzle.py
tests/: test_numerics.py.  test_symbolic_nozzle.py
